--- a/.build.yml
+++ b/.build.yml
@@ -9,7 +9,6 @@ requires:
     - make
     - gtk2
     - intltool
-    - cafe-common
     - which
 
   debian:
@@ -21,7 +20,6 @@ requires:
     - libgtk2.0-dev
     - libxml-parser-perl
     - make
-    - cafe-common
     - pkg-config
 
   fedora:
@@ -31,7 +29,6 @@ requires:
     - git
     - gtk2-devel
     - make
-    - cafe-common
     - redhat-rpm-config
 
   ubuntu:
@@ -41,11 +38,26 @@ requires:
     - libgtk2.0-dev
     - libxml-parser-perl
     - make
-    - cafe-common
     - pkg-config
 
 variables:
   - CFLAGS="-Wall -Werror=format-security"
+
+before_scripts:
+  # Install cafe-common from master branch
+  - if [ ! -e cafe-common-master ]; then
+  -     cd ${START_DIR}
+  -     git clone --depth 1  https://github.com/cafe-desktop/cafe-common.git -b master cafe-common-master
+  -     cd cafe-common-master
+  -     ./autogen.sh
+  -     if [ ${DISTRO_NAME} == "debian" -o ${DISTRO_NAME} == "ubuntu" ];then
+  -         ./configure --prefix=/usr --libdir=/usr/lib/x86_64-linux-gnu --libexecdir=/usr/lib/x86_64-linux-gnu
+  -     else
+  -         ./configure --prefix=/usr
+  -     fi
+  -     make
+  -     make install
+  - fi
 
 after_scripts:
   - make distcheck
