--- a/desktop-themes/Blue-Undersea/emerald/Makefile.am
+++ b/desktop-themes/Blue-Undersea/emerald/Makefile.am
@@ -1,6 +1,6 @@
 
 themedir = $(datadir)/themes/Blue-Submarine/emerald
 
-theme_DATA = blue-submarine.emerald
+theme_DATA = blue-undersea.emerald
 
 EXTRA_DIST = $(theme_DATA)
