--- a/desktop-themes/Green-Undersea/emerald/Makefile.am
+++ b/desktop-themes/Green-Undersea/emerald/Makefile.am
@@ -1,6 +1,6 @@
 
 themedir = $(datadir)/themes/Green-Submarine/emerald
 
-theme_DATA = green-submarine.emerald
+theme_DATA = green-undersea.emerald
 
 EXTRA_DIST = $(theme_DATA)
