rename menta -> mint

--- a/desktop-themes/Green-Undersea/index.theme.in
+++ b/desktop-themes/Green-Undersea/index.theme.in
@@ -7,5 +7,5 @@ Encoding=UTF-8
 [X-GNOME-Metatheme]
 GtkTheme=Green-Undersea
 MetacityTheme=Green-Undersea
-IconTheme=menta
+IconTheme=mint
 CursorTheme=cafe
