--- a/desktop-themes/BlueMint/gtk-2.0/apps/caja.rc
+++ b/desktop-themes/BlueMint/gtk-2.0/apps/caja.rc
@@ -1,4 +1,4 @@
-### This file styles Caja. caja-e.rc is for Caja elementary. ###
+### This file styles Caja. caja-e.rc is for Caja elemintry. ###
 
 style "caja-window-base" { bg[NORMAL] = @base_color }
 
