--- a/desktop-themes/BigContrastInverse/index.theme.in
+++ b/desktop-themes/BigContrastInverse/index.theme.in
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Type=X-GNOME-Metatheme
-Name=High Contrast Inverse
+Name=Big Contrast Inverse
 Comment=White-on-black text and icons
 Encoding=UTF-8
 
 [X-GNOME-Metatheme]
-GtkTheme=BigContrastInverse
+GtkTheme=HighContrastInverse
 IconTheme=ContrastBig
 MetacityTheme=BigContrastInverse
 CursorTheme=cafe
