--- a/desktop-themes/ContrastBig/index.theme.in
+++ b/desktop-themes/ContrastBig/index.theme.in
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Type=X-GNOME-Metatheme
-Name=High Contrast
+Name=Big Contrast
 Comment=High contrast theme
 Encoding=UTF-8
 
 [X-GNOME-Metatheme]
-GtkTheme=BigContrast
-IconTheme=BigContrast
-MetacityTheme=BigContrast
+GtkTheme=HighContrast
+IconTheme=HighContrast
+MetacityTheme=HighContrast
 CursorTheme=Adwaita
 CursorSize=24
 
