--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,33 +30,30 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: install docker-build
         run: |
-          curl -Ls -o docker-build https://github.com/cafe-desktop/cafe-dev-scripts/raw/master/travis/docker-build
-          curl -Ls -o gen-index https://github.com/cafe-desktop/cafe-dev-scripts/raw/master/travis/gen-index.sh
-          curl -Ls -o html-cppcheck https://github.com/cafe-desktop/cafe-dev-scripts/raw/master/travis/build/html-cppcheck.sh
-          chmod +x docker-build gen-index html-cppcheck
+          curl -Ls -o install-dockerbuild https://github.com/cafe-desktop/cafe-dev-scripts/raw/master/travis/build/install-dockerbuild.sh
+          curl -Ls -o build-push https://github.com/cafe-desktop/cafe-dev-scripts/raw/master/travis/build/build-push.sh
+          chmod +x install-dockerbuild build-push
+          ./install-dockerbuild
 
       - name: Build and push
         env:
           TRAVIS_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: |
-          export TRAVIS_COMMIT=$GITHUB_SHA
-          export TRAVIS_BRANCH=$(echo $GITHUB_REF |cut -d "/" -f3)
-          ./docker-build --name "debian" --config .build.yml --install
-          ./docker-build --name "debian" --verbose --config .build.yml --build scripts
+          ./build-push
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@v4
         if: ${{ github.event_name == 'push' }}
         with:
           branch: gh-pages
