--- a/.build.yml
+++ b/.build.yml
@@ -17,10 +17,4 @@ before_scripts:
   - ./install-from-git https://github.com/cafe-desktop/cafe-common master
 
 build_scripts:
-  - mkdir html-report
-  - ./autogen.sh
-  - make
-
-after_scripts:
-  - make distcheck
-
+  - ./make-scanbuild
