ci: add clang packages

--- a/.build.yml
+++ b/.build.yml
@@ -5,6 +5,8 @@ requires:
   debian:
     # Useful URL: https://github.com/cafe-desktop/debian-packages
     # Useful URL: https://salsa.debian.org/debian-cafe-team/cafe-themes
+    - clang
+    - clang-tools
     - expect #required for unbuffer
     - git
     - icon-naming-utils
