--- a/desktop-themes/Green-Undersea/gtk-2.0/apps/lapiz.rc
+++ b/desktop-themes/Green-Undersea/gtk-2.0/apps/lapiz.rc
@@ -1,6 +1,6 @@
-### Styles pluma. Removes the ugly frame etc. ###
+### Styles lapiz. Removes the ugly frame etc. ###
 
-style "pluma-frame" {	
+style "lapiz-frame" {	
 	engine "pixmap" {
  		image {
 			function = SHADOW
@@ -8,7 +8,7 @@ style "pluma-frame" {
 	}
 }
 
-style "pluma-statusbar" {	
+style "lapiz-statusbar" {	
 	ythickness = 0
 
 	engine "pixmap" {
@@ -24,13 +24,13 @@ style "pluma-statusbar" {
 	}
 }
 
-style "pluma-notebook" = "murrine-notebook-bg" {
+style "lapiz-notebook" = "murrine-notebook-bg" {
 	xthickness = 0 # Width of tabs and notebook borders.
 	ythickness = 1 # Height of tabs and notebook borders.
 }
 
-widget_class "*Pluma*.<GtkFrame>*"		style "pluma-frame"
+widget_class "*Pluma*.<GtkFrame>*"		style "lapiz-frame"
 widget_class "*Pluma*.<GtkScrolledWindow>"	style "murrine-thin"
-widget_class "*Pluma*.<GtkNotebook>"		style "pluma-notebook"
+widget_class "*Pluma*.<GtkNotebook>"		style "lapiz-notebook"
 widget_class "*Pluma*.<GtkArrow>*"		style:highest "murrine-default"
-widget_class "*Pluma*.<GtkStatusbar>*"		style "pluma-statusbar"
+widget_class "*Pluma*.<GtkStatusbar>*"		style "lapiz-statusbar"
