BlueMint: ctk: rename gtk -> ctk

--- a/desktop-themes/BlueMint/ctk-3.0/borders/Makefile.am
+++ b/desktop-themes/BlueMint/ctk-3.0/borders/Makefile.am
@@ -1,4 +1,4 @@
-themedir = $(datadir)/themes/BlueMint/gtk-3.0/borders
+themedir = $(datadir)/themes/BlueMint/ctk-3.0/borders
 
 theme_DATA = \
 	button-active-focus.png \
