--- a/desktop-themes/BlueMint/ctk-3.0/Makefile.am
+++ b/desktop-themes/BlueMint/ctk-3.0/Makefile.am
@@ -1,15 +1,15 @@
-themedir = $(datadir)/themes/BlueMint/gtk-3.0
+themedir = $(datadir)/themes/BlueMint/ctk-3.0
 
 theme_DATA = \
 	gnome-applications.css \
-	gtk.css \
-	gtk-fallback.css \
-	gtk-main-common.css \
-	gtk-main.css \
-	gtk-widgets-assets.css \
-	gtk-widgets-backgrounds.css \
-	gtk-widgets-borders.css \
-	gtk-widgets.css \
+	ctk.css \
+	ctk-fallback.css \
+	ctk-main-common.css \
+	ctk-main.css \
+	ctk-widgets-assets.css \
+	ctk-widgets-backgrounds.css \
+	ctk-widgets-borders.css \
+	ctk-widgets.css \
 	cafe-applications.css \
 	other-applications.css \
 	settings.ini \
