classic themes: settings: enable button-images and menu-images

--- a/desktop-themes/ClassicGreen/ctk-3.0/settings.ini
+++ b/desktop-themes/ClassicGreen/ctk-3.0/settings.ini
@@ -3,3 +3,5 @@ ctk-color-scheme = "base_color:#ffffff\nbg_color:#edeceb\nfg_color:#000000\nsele
 ctk-auto-mnemonics = 0
 ctk-visible-focus = automatic
 ctk-primary-button-warps-slider = false
+ctk-button-images=1
+ctk-menu-images=1
