--- a/desktop-themes/ClassicGreen/gtk-3.0/settings.ini
+++ b/desktop-themes/ClassicGreen/gtk-3.0/settings.ini
@@ -3,3 +3,5 @@ gtk-color-scheme = "base_color:#ffffff\nbg_color:#edeceb\nfg_color:#000000\nsele
 gtk-auto-mnemonics = 0
 gtk-visible-focus = automatic
 gtk-primary-button-warps-slider = false
+gtk-button-images=1
+gtk-menu-images=1
