--- a/desktop-themes/Blue-Undersea/index.theme.in
+++ b/desktop-themes/Blue-Undersea/index.theme.in
@@ -5,6 +5,7 @@ Comment=A medium blue theme with dark menus and panel
 Encoding=UTF-8
 
 [X-GNOME-Metatheme]
+CtkTheme=Blue-Undersea
 GtkTheme=Blue-Undersea
 MetacityTheme=Blue-Undersea
 IconTheme=cafe
