--- a/desktop-themes/GreenLagoon/index.theme.in
+++ b/desktop-themes/GreenLagoon/index.theme.in
@@ -5,6 +5,7 @@ Comment=A clean light green theme
 Encoding=UTF-8
 
 [X-GNOME-Metatheme]
+CtkTheme=GreenLagoon
 GtkTheme=GreenLagoon
 MetacityTheme=GreenLagoon
 IconTheme=mint
