--- a/desktop-themes/Mint/index.theme.in
+++ b/desktop-themes/Mint/index.theme.in
@@ -5,6 +5,7 @@ Comment=A clean light theme with green elements
 Encoding=UTF-8
 
 [X-GNOME-Metatheme]
+CtkTheme=Mint
 GtkTheme=Mint
 MetacityTheme=Mint
 IconTheme=mint
