all themes: settings: enable button-images and menu-images

--- a/desktop-themes/BlackCAFE/ctk-3.0/settings.ini
+++ b/desktop-themes/BlackCAFE/ctk-3.0/settings.ini
@@ -2,3 +2,5 @@
 ctk-color-scheme = "base_color:#3b3b3e\nbg_color:#3b3b3e\ntooltip_bg_color:#000000\nselected_bg_color:#666669\ntext_color:#ffffff\nfg_color:#ffffff;\ntooltip_fg_color:#eeeeee\nselected_fg_color:#ffffff"
 ctk-auto-mnemonics = 1
 ctk-visible-focus = automatic
+ctk-button-images=1
+ctk-menu-images=1
