--- a/desktop-themes/BlueMint/ctk-3.0/settings.ini
+++ b/desktop-themes/BlueMint/ctk-3.0/settings.ini
@@ -2,3 +2,5 @@
 ctk-color-scheme = "base_color:#f7f7f7\nbg_color:#d4d4d4\ntooltip_bg_color:#F5F5B5\nselected_bg_color:#6699CC\ntext_color:#2c2c2c\nfg_color:#2c2c2c;\ntooltip_fg_color:#2c2c2c\nselected_fg_color:#ffffff"
 ctk-auto-mnemonics = 1
 ctk-visible-focus = automatic
+ctk-button-images=1
+ctk-menu-images=1
