--- a/desktop-themes/Green-Undersea/ctk-3.0/settings.ini
+++ b/desktop-themes/Green-Undersea/ctk-3.0/settings.ini
@@ -1,4 +1,5 @@
 [Settings]
 ctk-color-scheme = "base_color:#FFF\nbg_color:#CBD9D4\ntooltip_bg_color:#DBFFF3\nselected_bg_color:#72B49D\ntext_color:#1A1A1A\nfg_color:#101010;\ntooltip_fg_color:#000000\nselected_fg_color:#ffffff\nlink_color:#00CC85\nbg_color_dark:#1F2724\nfg_color_dark:#E6E6E6"
 ctk-auto-mnemonics = 1
-
+ctk-button-images=1
+ctk-menu-images=1
