--- a/desktop-themes/GreenLagoon/ctk-3.0/settings.ini
+++ b/desktop-themes/GreenLagoon/ctk-3.0/settings.ini
@@ -2,3 +2,5 @@
 ctk-color-scheme = "base_color:#E6EFE3\nbg_color:#E6EFE3\ntooltip_bg_color:#333433\nselected_bg_color:#6F816A\ntext_color:#000000\nfg_color:#101010;\ntooltip_fg_color:#ffffff\nselected_fg_color:#ffffff"
 ctk-auto-mnemonics = 1
 ctk-visible-focus = automatic
+ctk-button-images=1
+ctk-menu-images=1
