--- a/desktop-themes/Mint/gtk-3.0/settings.ini
+++ b/desktop-themes/Mint/gtk-3.0/settings.ini
@@ -2,3 +2,5 @@
 gtk-color-scheme = "base_color:#f7f7f7\nbg_color:#dcdcdc\ntooltip_bg_color:#F5F5B5\nselected_bg_color:#accd8a\ntext_color:#2c2c2c\nfg_color:#2c2c2c;\ntooltip_fg_color:#000000\nselected_fg_color:#f5f5f5"
 gtk-auto-mnemonics = 1
 gtk-visible-focus = automatic
+gtk-button-images=1
+gtk-menu-images=1
