--- a/desktop-themes/BlackCAFE/gtk-2.0/Styles/Makefile.am
+++ b/desktop-themes/BlackCAFE/gtk-2.0/Styles/Makefile.am
@@ -3,7 +3,7 @@ THEME_NAME=BlackCAFE
 themedir = $(datadir)/themes/$(THEME_NAME)/gtk-2.0/Styles
 
 theme_DATA = \
-	caja.rc \
+	baul.rc \
 	terminal.rc
 
 EXTRA_DIST = $(theme_DATA)
