--- a/desktop-themes/Blue-Undersea/gtk-2.0/apps/Handles/Makefile.am
+++ b/desktop-themes/Blue-Undersea/gtk-2.0/apps/Handles/Makefile.am
@@ -2,7 +2,7 @@
 themedir = $(datadir)/themes/Blue-Undersea/gtk-2.0/apps/Handles
 
 theme_DATA = \
-	handle-caja.png \
+	handle-baul.png \
 	resize-grip.png
 
 EXTRA_DIST = $(theme_DATA)
