--- a/desktop-themes/BlueMint/gtk-2.0/apps/Handles/Makefile.am
+++ b/desktop-themes/BlueMint/gtk-2.0/apps/Handles/Makefile.am
@@ -2,7 +2,7 @@ themedir = $(datadir)/themes/BlueMint/gtk-2.0/apps/Handles
 
 theme_DATA = \
 	resize_grip.png \
-	handle-caja.png
+	handle-baul.png
 
 EXTRA_DIST = $(theme_DATA)
 
