--- a/desktop-themes/Green-Undersea/gtk-2.0/apps/Makefile.am
+++ b/desktop-themes/Green-Undersea/gtk-2.0/apps/Makefile.am
@@ -2,7 +2,7 @@
 themedir = $(datadir)/themes/Green-Undersea/gtk-2.0/apps
 
 theme_DATA = \
-	caja.rc \
+	baul.rc \
 	gmusicbrowser.rc \
 	panel.rc \
 	pcmanfm.rc \
