--- a/desktop-themes/GreenLagoon/gtk-2.0/Styles/Makefile.am
+++ b/desktop-themes/GreenLagoon/gtk-2.0/Styles/Makefile.am
@@ -3,6 +3,6 @@ THEME_NAME=GreenLagoon
 themedir = $(datadir)/themes/$(THEME_NAME)/gtk-2.0/Styles
 
 theme_DATA = \
-	caja.rc
+	baul.rc
 
 EXTRA_DIST = $(theme_DATA)
