--- a/desktop-themes/BlackCAFE/gtk-2.0/Styles/baul.rc
+++ b/desktop-themes/BlackCAFE/gtk-2.0/Styles/baul.rc
@@ -3,7 +3,7 @@
 ##########################################
 gtk_color_scheme = "fg_color:#101010\nbg_color:#4D4D4D"
 
-style "caja-sidebar"
+style "baul-sidebar"
 {
 
 #	text[NORMAL]	= @fg_color
@@ -19,7 +19,7 @@ style "caja-sidebar"
 	ythickness = 0
 }
 
-style "caja-view"
+style "baul-view"
 {
 	xthickness		= 0
 	ythickness		= 0
@@ -27,19 +27,19 @@ style "caja-view"
 	base[NORMAL]	= @bg_color
 }
 
-style "caja-statusbar"
+style "baul-statusbar"
 {
 	bg[NORMAL]	= mix (0.60, shade (1.05, "#454548"), "#454548")
 	xthickness	= 4
 	ythickness	= 1
 }
 
-style "caja-location" {
+style "baul-location" {
 
 	bg[NORMAL]	= mix (0.60, shade (1.05, @bg_color), @bg_color)
 }
 
-style "caja-scrollbar"
+style "baul-scrollbar"
 {
 	GtkScrollbar::slider-width = 11
 
@@ -65,9 +65,9 @@ style "caja-scrollbar"
 	}
 }
 
-widget_class	"*Caja*Places*Sidebar*"			style "caja-sidebar"
-widget_class	"*Caja*View*"					style "caja-view"
-widget_class	"*Caja*Statusbar*"				style "caja-statusbar"
-widget			"*.caja-extra-view-widget" 		style : highest "caja-location"
-widget			"*Caja*Scrollbar*"				style "caja-scrollbar"
+widget_class	"*Caja*Places*Sidebar*"			style "baul-sidebar"
+widget_class	"*Caja*View*"					style "baul-view"
+widget_class	"*Caja*Statusbar*"				style "baul-statusbar"
+widget			"*.baul-extra-view-widget" 		style : highest "baul-location"
+widget			"*Caja*Scrollbar*"				style "baul-scrollbar"
 
