--- a/desktop-themes/Green-Undersea/gtk-2.0/apps/baul.rc
+++ b/desktop-themes/Green-Undersea/gtk-2.0/apps/baul.rc
@@ -1,8 +1,8 @@
 ### This file styles Caja. ###
 
-style "caja-window-base" { bg[NORMAL] = @bg_color }
+style "baul-window-base" { bg[NORMAL] = @bg_color }
 
-style "caja-sidebar" = "murrine-sidebar" {
+style "baul-sidebar" = "murrine-sidebar" {
 	GtkTreeView::horizontal_separator = 15
 	GtkTreeView::vertical_separator = 2
 	text[NORMAL] = @fg_color
@@ -12,12 +12,12 @@ style "caja-sidebar" = "murrine-sidebar" {
 	GtkTreeView::even_row_color = mix (0.60, shade (1.15, @bg_color), @bg_color)
 }
 
-style "caja-view" {
+style "baul-view" {
 	xthickness = 0
 	ythickness = 0
 }
 
-style "caja-handle" {
+style "baul-handle" {
 	GtkPaned::handle-size = 1
 	
 	engine "pixmap" {
@@ -25,14 +25,14 @@ style "caja-handle" {
 		image {
 			function	= HANDLE
 			recolorable	= TRUE
-			file		= "Handles/handle-caja.png"
+			file		= "Handles/handle-baul.png"
 			stretch		= TRUE
 			border		= { 0, 0, 0, 0 }
 		}
 	}
 }
 
-style "caja-statusbar"
+style "baul-statusbar"
 {
 	bg[NORMAL]  = mix (0.60, shade (1.10, @bg_color), @bg_color)
 	base[NORMAL] = @base_color
@@ -51,12 +51,12 @@ style "caja-statusbar"
 	}
 }
 
-style "caja-location"
+style "baul-location"
 {
 	bg[NORMAL]  = mix (0.60, shade (1.05, @bg_color), @bg_color)
 }
 
-style "caja-pathbar"
+style "baul-pathbar"
 {	
     bg[PRELIGHT] 	= shade(0.91, @bg_color)
     bg[ACTIVE] 		= shade(0.76, @bg_color)
@@ -70,7 +70,7 @@ style "caja-pathbar"
 }
 
 # workaround for toolbar dropdown menu and toolbar button
-style "caja-toolbar-button"
+style "baul-toolbar-button"
 {
     xthickness	= 3
     ythickness	= 2
@@ -109,19 +109,19 @@ style "caja-toolbar-button"
 # Order of assignment is important
 #############################################
 
-widget_class "*CajaSidePane.*"                 style "caja-sidebar"
-widget_class "*Caja*Places*Sidebar*"           style "caja-sidebar"
-widget_class "*Caja*Side*.GtkWidget"           style "caja-sidebar"
-widget_class "*Caja*Side*Title*"               style "caja-sidebar"
+widget_class "*CajaSidePane.*"                 style "baul-sidebar"
+widget_class "*Caja*Places*Sidebar*"           style "baul-sidebar"
+widget_class "*Caja*Side*.GtkWidget"           style "baul-sidebar"
+widget_class "*Caja*Side*Title*"               style "baul-sidebar"
 
-widget "*CajaNavigationWindow"                 style "caja-window-base"
+widget "*CajaNavigationWindow"                 style "baul-window-base"
 
 widget_class "*Caja*Scrollbar"                 style "murrine-scrollbar"
 widget_class "*CajaSidePane.*Scrollbar"        style:highest "murrine-scrollbar"
-widget_class "*Caja*Statusbar*"                style "caja-statusbar"
+widget_class "*Caja*Statusbar*"                style "baul-statusbar"
 
-widget "*Caja*Splitter"                        style "caja-handle"
-widget_class "*Caja*View*"                     style "caja-view"
+widget "*Caja*Splitter"                        style "baul-handle"
+widget_class "*Caja*View*"                     style "baul-view"
 widget_class "*Caja*Notebook"                  style "murrine-notebook"
 
 widget_class "*Caja*<GtkTreeView>.<GtkButton>" style "murrine-treeview-header"
@@ -129,10 +129,10 @@ widget_class "*Caja*<GtkCTree>.<GtkButton>"    style "murrine-treeview-header"
 widget_class "*Caja*<GtkList>.<GtkButton>"     style "murrine-treeview-header"
 widget_class "*Caja*<GtkCList>.<GtkButton>"    style "murrine-treeview-header"
 
-widget_class "*CajaPathBar*"                   style "caja-pathbar" 
-widget "*.caja-extra-view-widget" 		       style : highest "caja-location"
+widget_class "*CajaPathBar*"                   style "baul-pathbar" 
+widget "*.baul-extra-view-widget" 		       style : highest "baul-location"
 
 # workaround for toolbar dropdown menu and toolbar button
-widget_class "*Caja*Toolbar*Button" style "caja-toolbar-button"
-widget_class "*Caja*Toolbar*.<GtkComboBox>.<GtkCellView>" style "caja-toolbar-button"
+widget_class "*Caja*Toolbar*Button" style "baul-toolbar-button"
+widget_class "*Caja*Toolbar*.<GtkComboBox>.<GtkCellView>" style "baul-toolbar-button"
 
