--- a/desktop-themes/Green-Undersea/gtk-2.0/apps/pcmanfm.rc
+++ b/desktop-themes/Green-Undersea/gtk-2.0/apps/pcmanfm.rc
@@ -31,7 +31,7 @@ style "pcmanfm-handle"
 		image {
 			function	= HANDLE
 			recolorable	= TRUE
-			file		= "Handles/handle-caja.png"
+			file		= "Handles/handle-baul.png"
 			stretch		= TRUE
 			border 		= { 0, 0, 0, 0 }
 		}
