--- a/desktop-themes/GreenLagoon/gtk-2.0/Styles/baul.rc
+++ b/desktop-themes/GreenLagoon/gtk-2.0/Styles/baul.rc
@@ -3,7 +3,7 @@
 ##########################################
 gtk_color_scheme = "fg_color:#101010\nbg_color:#E9EFE7"
 
-style "caja-handle"
+style "baul-handle"
 {
 	GtkPaned::handle-size = 0
 	xthickness = 0
@@ -11,7 +11,7 @@ style "caja-handle"
 	base[NORMAL] = @bg_color
 }
 
-style "caja-sidebar"
+style "baul-sidebar"
 {
 
 	text[NORMAL] = @fg_color
@@ -27,7 +27,7 @@ style "caja-sidebar"
 	ythickness = 0
 }
 
-style "caja-extra-view"
+style "baul-extra-view"
 {
 
 	xthickness		= 0
@@ -37,7 +37,7 @@ style "caja-extra-view"
 }
 
 
-style "caja-view"
+style "baul-view"
 {
 	xthickness		= 0
 	ythickness		= 0
@@ -45,30 +45,30 @@ style "caja-view"
 	base[NORMAL]	= "#F1F7EF"
 
 }
-style "caja-statusbar"
+style "baul-statusbar"
 {
 	xthickness		= 4
 	ythickness		= 1
 }
-style "caja-window-base"
+style "baul-window-base"
 {
 	#bg[NORMAL]	= @bg_color
 
 }
 
-style "caja-location" {
+style "baul-location" {
 
 	bg[NORMAL]  = mix (0.60, shade (1.05, "#E9EFE7"), "#E9EFE7")
 }
 
 
 # CAJA
-widget_class	"*Caja*Window*"		style "caja-window-base"
-widget_class	"*Caja*Places*Sidebar*"	style "caja-sidebar"
-widget_class	"*Caja*View*"		style "caja-view"
-widget		"*Caja*Splitter"		style "caja-handle"
-widget_class	"*Caja*Statusbar*"		style "caja-statusbar"
+widget_class	"*Caja*Window*"		style "baul-window-base"
+widget_class	"*Caja*Places*Sidebar*"	style "baul-sidebar"
+widget_class	"*Caja*View*"		style "baul-view"
+widget		"*Caja*Splitter"		style "baul-handle"
+widget_class	"*Caja*Statusbar*"		style "baul-statusbar"
 # For Eleminty Caja
 widget_class	"*Caja*GtkToolbar*"		style "murrine-togglebutton"
 
-widget "*.caja-extra-view-widget" 		style : highest "caja-location"
+widget "*.baul-extra-view-widget" 		style : highest "baul-location"
