--- a/desktop-themes/Mint/gtk-2.0/apps/Handles/Makefile.am
+++ b/desktop-themes/Mint/gtk-2.0/apps/Handles/Makefile.am
@@ -3,7 +3,7 @@ themedir = $(datadir)/themes/Mint/gtk-2.0/apps/Handles
 
 theme_DATA = \
 	resize_grip.png \
-	handle-caja.png
+	handle-baul.png
 
 EXTRA_DIST = $(theme_DATA)
 
