--- a/desktop-themes/Mint/gtk-2.0/apps/Makefile.am
+++ b/desktop-themes/Mint/gtk-2.0/apps/Makefile.am
@@ -12,7 +12,7 @@ theme_DATA = \
 	stock_home.png \
 	stock_refresh.png \
 	stock_stop.png \
-	caja.rc \
+	baul.rc \
 	lapiz.rc
 
 EXTRA_DIST = $(theme_DATA)
