--- a/desktop-themes/ClassicGreen/gtk-2.0/applications.rc
+++ b/desktop-themes/ClassicGreen/gtk-2.0/applications.rc
@@ -26,7 +26,7 @@ widget "*.gtk-combobox-popup-menu.*" style "menuitem_text_is_fg_color_workaround
 widget_class "*<GtkListItem>*" style "fg_is_text_color_workaround"
 # GtkCList also uses the fg color to draw text on top of the base colors.
 widget_class "*<GtkCList>" style "fg_is_text_color_workaround"
-# Caja when renaming files, and maybe other places.
+# Baul when renaming files, and maybe other places.
 widget_class "*<EelEditableLabel>" style "fg_is_text_color_workaround"
 
 # See the documinttion of the style.
