rename CAJA -> BAUL

--- a/desktop-themes/BlackCAFE/gtk-2.0/Styles/baul.rc
+++ b/desktop-themes/BlackCAFE/gtk-2.0/Styles/baul.rc
@@ -1,5 +1,5 @@
 ##########################################
-# CAJA	
+# BAUL	
 ##########################################
 gtk_color_scheme = "fg_color:#101010\nbg_color:#4D4D4D"
 
