--- a/desktop-themes/BlueMint/gtk-2.0/apps/baul.rc
+++ b/desktop-themes/BlueMint/gtk-2.0/apps/baul.rc
@@ -62,7 +62,7 @@ style "baul-pathbar"
 }
 
 ############################################
-# CAJA
+# BAUL
 # Order of assignment is important
 #############################################
 
