--- a/desktop-themes/Green-Undersea/gtk-2.0/apps/baul.rc
+++ b/desktop-themes/Green-Undersea/gtk-2.0/apps/baul.rc
@@ -105,7 +105,7 @@ style "baul-toolbar-button"
 }
 
 ############################################
-# CAJA
+# BAUL
 # Order of assignment is important
 #############################################
 
