--- a/icon-themes/ContrastBig/48x48/apps/Makefile.am
+++ b/icon-themes/ContrastBig/48x48/apps/Makefile.am
@@ -14,7 +14,7 @@ icon_DATA= \
 	anaconda.png \
 	applets-screenshooter.png \
 	applications-blender.png \
-	atril.png \
+	lector.png \
 	audiobook.png \
 	ax-applet.png \
 	blender.png \
