desktop-themes: Fix warnings in Makefiles:
Fixes the warnings:
desktop-themes/BlackCAFE/Makefile.am:11: warning: '%'-style pattern rules are a GNU make extension
desktop-themes/BlueMint-border/Makefile.am:9: warning: '%'-style pattern rules are a GNU make extension
desktop-themes/BlueMint/Makefile.am:11: warning: '%'-style pattern rules are a GNU make extension
desktop-themes/ClassicGreen/Makefile.am:10: warning: '%'-style pattern rules are a GNU make extension
desktop-themes/ClassicOk/Makefile.am:10: warning: '%'-style pattern rules are a GNU make extension
desktop-themes/GreenLagoon-border/Makefile.am:8: warning: '%'-style pattern rules are a GNU make extension
desktop-themes/GreenLagoon/Makefile.am:11: warning: '%'-style pattern rules are a GNU make extension
desktop-themes/Mint-border/Makefile.am:9: warning: '%'-style pattern rules are a GNU make extension
desktop-themes/Mint/Makefile.am:11: warning: '%'-style pattern rules are a GNU make extension

--- a/desktop-themes/BlueMint-border/Makefile.am
+++ b/desktop-themes/BlueMint-border/Makefile.am
@@ -6,7 +6,8 @@ theme_DATA = \
 	COPYING \
 	README
 
-%.theme: %.theme.in
+SUFFIXES = .theme.in .theme
+.theme.in.theme:
 	$(AM_V_GEN) $(MSGFMT) --desktop --template $< -d $(top_srcdir)/po -o $@
 
 SUBDIRS =		\
