--- a/desktop-themes/GreenLagoon-border/Makefile.am
+++ b/desktop-themes/GreenLagoon-border/Makefile.am
@@ -5,7 +5,8 @@ themedir = $(datadir)/themes/$(THEME_NAME)
 theme_DATA = \
 	COPYING
 
-%.theme: %.theme.in
+SUFFIXES = .theme.in .theme
+.theme.in.theme:
 	$(AM_V_GEN) $(MSGFMT) --desktop --template $< -d $(top_srcdir)/po -o $@
 
 SUBDIRS = \
