--- a/desktop-themes/Mint/Makefile.am
+++ b/desktop-themes/Mint/Makefile.am
@@ -8,7 +8,8 @@ theme_DATA = \
 	index.theme \
 	README
 
-%.theme: %.theme.in
+SUFFIXES = .theme.in .theme
+.theme.in.theme:
 	$(AM_V_GEN) $(MSGFMT) --desktop --template $< -d $(top_srcdir)/po -o $@
 
 SUBDIRS = \
