--- a/desktop-themes/Blue-Undersea/gtk-2.0/apps/panel.rc
+++ b/desktop-themes/Blue-Undersea/gtk-2.0/apps/panel.rc
@@ -150,7 +150,7 @@ widget_class "*tray*"			style "theme-panel"
 widget_class "*computertemp*"		style "theme-panel"
 widget_class "*Applet*Tomboy*"		style "theme-panel"
 widget_class "*Applet*Netstatus*"	style "theme-panel"
-widget "*WnckPager*"	    	    style "workspace-switcher"
+widget "*VnckPager*"	    	    style "workspace-switcher"
 
 # syncronize panel menus
 widget_class "*CafePanelAppletFrameDBus*" style "applet"
