--- a/icon-themes/ContrastBig/24x24/apps/Makefile.am
+++ b/icon-themes/ContrastBig/24x24/apps/Makefile.am
@@ -33,7 +33,7 @@ icon_DATA= \
 	display-capplet.png \
 	documents.png \
 	empathy.png \
-	engrampa.png \
+	grapa.png \
 	eog.png \
 	eom.png \
 	evince.png \
