--- a/icon-themes/ContrastBig/32x32/apps/Makefile.am
+++ b/icon-themes/ContrastBig/32x32/apps/Makefile.am
@@ -32,7 +32,7 @@ icon_DATA= \
 	display-capplet.png \
 	documents.png \
 	empathy.png \
-	engrampa.png \
+	grapa.png \
 	eog.png \
 	eom.png \
 	evince.png \
