ci: comment the cafe build depends

--- a/.build.yml
+++ b/.build.yml
@@ -4,7 +4,7 @@
 requires:
   debian:
     # Useful URL: https://github.com/cafe-desktop/debian-packages
-    # Useful URL: https://salsa.debian.org/debian-cafe-team/cafe-themes
+    # cafe B-D: cafe-common
     - aptitude
     - clang
     - clang-tools
